# pyschemaorg

./: LICENSE  README.md  pyproject.toml  requirements-dev.txt  requirements.txt  setup.sh
src/: __init__.py  factory.py
src/td/: __init__.py  action.py  administrative_area.py  aggregate_rating.py  alignment_object.py  audience.py  audio_object.py  brand.py  broadcast_channel.py  broadcast_frequency_specification.py  broadcast_service.py  business.py  claim.py  clip.py  comment.py  contact_point.py  country.py  creative_work.py  creative_work_season.py  creative_work_series.py  data_feed.py  data_type.py  date_time.py  defined_term.py  demand.py  entry_point.py  enums.py  episode.py  event.py  geo_coordinates.py  geo_shape.py  image_object.py  interaction_counter.py  item_list.py  language.py  list_item.py  location_feature_specification.py  map.py  media_object.py  music.py  (+40 more)
tests/: microformat.py  test_microformat.py
